--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
   <a href="https://www.instagram.com/v1engoodenough?igsh=dDBwamU4N3AwMGls" target="_blank">
     <img src="https://pic1.imgdb.cn/item/697cba0d1af8234bd07d65f5.png">
   </a>
-  <a href="https://twitter.com/xxx" target="_blank">
-    <img src="https://pic1.imgdb.cn/item/697cba0d1af8234bd07d65f5.png">
+  <a href="https://x.com/V1eNGoodenough" target="_blank">
+    <img src="https://pic1.imgdb.cn/item/697cbf1aad9f5f6883e335b7.png">
   </a>
   <a href="https://github.com/xxx" target="_blank">
     <img src="https://pic1.imgdb.cn/item/697cba0d1af8234bd07d65f5.png">
@@ -241,6 +241,31 @@
       <!-- 我的动态 -->
       <section id="updates" class="panel" style="display:none">
         <h2>我的动态 / Updates</h2>
+        <p>2026/1/30</p>
+        <p>I'm a creator currently focusing heavily on music production. I also enjoy fitness, and once I’m in good enough shape, I plan to start sharing more of my life. You can click the icon in the lower-left corner to visit my platforms. I look forward to your follow and subscription—every new friend truly means a lot to me.</p>
+        <p>我是一个自由职业者，现在非常喜欢把工作放在音乐制作上，同时我喜欢健身，等我身材变得足够好之后我想我会开始分享我的生活，你可以在左下角点击图标跳转至我的各个平台，期待您的关注和订阅，每一个新朋友对我来说都意义重大！</p>
+
+        <p>2026/1/30</p>
+        <p>I'm a creator currently focusing heavily on music production. I also enjoy fitness, and once I’m in good enough shape, I plan to start sharing more of my life. You can click the icon in the lower-left corner to visit my platforms. I look forward to your follow and subscription—every new friend truly means a lot to me.</p>
+        <p>我是一个自由职业者，现在非常喜欢把工作放在音乐制作上，同时我喜欢健身，等我身材变得足够好之后我想我会开始分享我的生活，你可以在左下角点击图标跳转至我的各个平台，期待您的关注和订阅，每一个新朋友对我来说都意义重大！</p>
+
+        <p>2026/1/30</p>
+        <p>I'm a creator currently focusing heavily on music production. I also enjoy fitness, and once I’m in good enough shape, I plan to start sharing more of my life. You can click the icon in the lower-left corner to visit my platforms. I look forward to your follow and subscription—every new friend truly means a lot to me.</p>
+        <p>我是一个自由职业者，现在非常喜欢把工作放在音乐制作上，同时我喜欢健身，等我身材变得足够好之后我想我会开始分享我的生活，你可以在左下角点击图标跳转至我的各个平台，期待您的关注和订阅，每一个新朋友对我来说都意义重大！</p>
+
+        <p>2026/1/30</p>
+        <p>I'm a creator currently focusing heavily on music production. I also enjoy fitness, and once I’m in good enough shape, I plan to start sharing more of my life. You can click the icon in the lower-left corner to visit my platforms. I look forward to your follow and subscription—every new friend truly means a lot to me.</p>
+        <p>我是一个自由职业者，现在非常喜欢把工作放在音乐制作上，同时我喜欢健身，等我身材变得足够好之后我想我会开始分享我的生活，你可以在左下角点击图标跳转至我的各个平台，期待您的关注和订阅，每一个新朋友对我来说都意义重大！</p>
+
+        <p>2026/1/30</p>
+        <p>I'm a creator currently focusing heavily on music production. I also enjoy fitness, and once I’m in good enough shape, I plan to start sharing more of my life. You can click the icon in the lower-left corner to visit my platforms. I look forward to your follow and subscription—every new friend truly means a lot to me.</p>
+        <p>我是一个自由职业者，现在非常喜欢把工作放在音乐制作上，同时我喜欢健身，等我身材变得足够好之后我想我会开始分享我的生活，你可以在左下角点击图标跳转至我的各个平台，期待您的关注和订阅，每一个新朋友对我来说都意义重大！</p>
+
+        <p>2026/1/30</p>
+        <p>I'm a creator currently focusing heavily on music production. I also enjoy fitness, and once I’m in good enough shape, I plan to start sharing more of my life. You can click the icon in the lower-left corner to visit my platforms. I look forward to your follow and subscription—every new friend truly means a lot to me.</p>
+        <p>我是一个自由职业者，现在非常喜欢把工作放在音乐制作上，同时我喜欢健身，等我身材变得足够好之后我想我会开始分享我的生活，你可以在左下角点击图标跳转至我的各个平台，期待您的关注和订阅，每一个新朋友对我来说都意义重大！</p>
+
+        <p>2026/1/30</p>
         <p>I'm a creator currently focusing heavily on music production. I also enjoy fitness, and once I’m in good enough shape, I plan to start sharing more of my life. You can click the icon in the lower-left corner to visit my platforms. I look forward to your follow and subscription—every new friend truly means a lot to me.</p>
         <p>我是一个自由职业者，现在非常喜欢把工作放在音乐制作上，同时我喜欢健身，等我身材变得足够好之后我想我会开始分享我的生活，你可以在左下角点击图标跳转至我的各个平台，期待您的关注和订阅，每一个新朋友对我来说都意义重大！</p>
       </section>
